Fix bugs and extract mapper layer for cleaner DTO conversions